<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".NowPlayingAcitvity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:src="@drawable/harp" />

    <TextView
        android:id="@+id/player_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="@dimen/player_song_text"
        android:text="@string/Ring"/>

    <TextView
        android:id="@+id/player_artists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:textSize="@dimen/player_artists_text"
        android:text="@string/ariana"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:padding="@dimen/activity_vertical_margin"
        android:progress="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_vertical_margin">

        <Button
            style="@style/ButtonStyle"
            android:background="@color/pause_button"
            android:text="@string/pause_button"  />

        <Button
            style="@style/ButtonStyle"
            android:background="@color/play_button"
            android:text="@string/play_button" />

        <Button
            style="@style/ButtonStyle"
            android:background="@color/stop_button"
            android:text="@string/stop_button"  />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/gotoartist"
            style="@style/ButtonStyle"
            android:background="@color/pause_button"
            android:text="@string/Artist"  />

        <Button
            android:id="@+id/switchalbum"
            style="@style/ButtonStyle"
            android:background="@color/stop_button"
            android:text="@string/album"  />

    </LinearLayout>


</LinearLayout>