<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        style="@style/mainImage"
        android:src="@drawable/musicbackground" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/now"
            style="@style/textview"
            android:contentDescription="@string/now_playing"
            android:text="@string/now_playing" />

        <TextView
            android:id="@+id/album"
            style="@style/textview"
            android:contentDescription="@string/album"
            android:text="@string/album" />

        <TextView
            android:id="@+id/artist"
            style="@style/textview"
            android:contentDescription="@string/Artist"
            android:text="@string/Artist"
            />

    </LinearLayout>

</LinearLayout>